# backend/ingester/src/main.rs
@@ -1,9 +1,66 @@
-use axum::Router;
-use serde::Deserialize;
-use serde::Serialize;
+use std::{net::SocketAddr, sync::Arc};
 
-#[derive(Deserialize, Serialize)]
-struct EnvConfig {}
+use axum::{
+    extract::{Path, State},
+    routing::{get, post},
+    Json, Router,
+};
+use chrono::{DateTime, Utc};
+use influxdb::{Client, InfluxDbWriteable};
+use rand::{distributions::Alphanumeric, Rng};
+use serde::{Deserialize, Serialize};
+use sqlx::PgPool;
+
+mod error {
+    use axum::{http::StatusCode, response::IntoResponse};
+
+    #[derive(thiserror::Error, Debug)]
+    pub enum Error {
+        #[error("an error ocured with the database")]
+        SqlxError(#[from] sqlx::Error),
+
+        #[error("an error ocured with the database")]
+        InfluxDbError(#[from] influxdb::Error),
+    }
+
+    impl Error {
+        fn status_code(&self) -> StatusCode {
+            // TODO: Handle errors better
+            match self {
+                Self::SqlxError(_) => StatusCode::INTERNAL_SERVER_ERROR,
+                Self::InfluxDbError(_) => StatusCode::INTERNAL_SERVER_ERROR,
+            }
+        }
+    }
+
+    pub type Result<T> = std::result::Result<T, Error>;
+
+    impl IntoResponse for Error {
+        fn into_response(self) -> axum::response::Response {
+            (self.status_code(), self.to_string()).into_response()
+        }
+    }
+}
+
+fn default_query() -> String {
+    "power_usage".to_owned()
+}
+
+#[derive(Deserialize)]
+struct EnvConfig {
+    influxdb_url: String,
+    #[serde(default = "default_query")]
+    influxdb_query: String,
+    influxdb_token: String,
+    database_url: String,
+    bind_addr: SocketAddr,
+}
+
+pub(crate) struct AppState {
+    config: EnvConfig,
+    influxdb_client: Client,
+    db_pool: PgPool,
+}
 
 #[tokio::main]
 async fn main() {
@@ -20,6 +77,202 @@ async fn main() {
         }
     };
 
-    let app = Router::new();
-    
+    let db_pool = sqlx::postgres::PgPoolOptions::new()
+        .max_connections(16)
+        .connect(&config.database_url)
+        .await
+        .unwrap();
+
+    sqlx::migrate!().run(&db_pool).await.unwrap();
+
+    let influxdb_client =
+        Client::new(&config.influxdb_url, "data").with_token(&config.influxdb_token);
+
+    let bind_addr = config.bind_addr.clone();
+    let app = Router::new()
+        .nest(
+            "/api",
+            Router::new()
+                .route("/admin/devices", get(get_all_devices).post(create_device))
+                .route(
+                    "/admin/devices/:device_id",
+                    get(get_device).post(update_device).delete(delete_device),
+                )
+                .route("/locations", get(get_locations))
+                .route("/submit", post(submit_data)),
+        )
+        .with_state(Arc::new(AppState {
+            config,
+            influxdb_client,
+            db_pool,
+        }));
+
+    axum::Server::bind(&bind_addr)
+        .serve(app.into_make_service())
+        .await
+        .unwrap();
+}
+
+#[derive(InfluxDbWriteable, Debug)]
+struct PowerUsageData {
+    time: DateTime<Utc>,
+    used_power: f64,
+    #[influxdb(tag)]
+    location: String,
+    #[influxdb(tag)]
+    machine_id: i32,
+}
+
+#[derive(Serialize, Debug)]
+struct Device {
+    id: i32,
+    name: String,
+    description: String,
+    location: String,
+}
+
+#[derive(Deserialize, Debug)]
+struct NewDevice {
+    name: String,
+    description: String,
+    location: String,
+}
+
+async fn get_all_devices(
+    State(state): State<Arc<AppState>>,
+) -> crate::error::Result<Json<Vec<Device>>> {
+    let devices = sqlx::query_as!(
+        Device,
+        "SELECT id, name, description, location FROM devices"
+    )
+    .fetch_all(&state.db_pool)
+    .await?;
+
+    Ok(Json(devices))
+}
+
+#[derive(Serialize, Debug)]
+struct NewDeviceKey {
+    key: String,
+}
+
+async fn create_device(
+    State(state): State<Arc<AppState>>,
+    Json(new_device): Json<NewDevice>,
+) -> crate::error::Result<Json<NewDeviceKey>> {
+    let key = rand::thread_rng()
+        .sample_iter(&Alphanumeric)
+        .take(120)
+        .map(char::from)
+        .collect::<String>();
+
+    sqlx::query!(
+        "INSERT INTO devices (name, description, location, authtoken) VALUES ($1, $2, $3, $4)",
+        new_device.name,
+        new_device.description,
+        new_device.location,
+        key
+    )
+    .execute(&state.db_pool)
+    .await?;
+
+    Ok(Json(NewDeviceKey { key }))
+}
+
+async fn get_device(
+    Path(id): Path<i32>,
+    State(state): State<Arc<AppState>>,
+) -> crate::error::Result<Json<Device>> {
+    let device = sqlx::query_as!(
+        Device,
+        "SELECT id, name, description, location FROM devices WHERE id = $1",
+        id
+    )
+    .fetch_one(&state.db_pool)
+    .await?;
+
+    Ok(Json(device))
+}
+
+async fn update_device(
+    Path(id): Path<i32>,
+    State(state): State<Arc<AppState>>,
+    Json(new_device): Json<NewDevice>,
+) -> crate::error::Result<()> {
+    sqlx::query!(
+        "UPDATE devices SET name = $1, description = $2, location = $3 WHERE id = $4",
+        new_device.name,
+        new_device.description,
+        new_device.location,
+        id
+    )
+    .execute(&state.db_pool)
+    .await?;
+    Ok(())
+}
+
+async fn delete_device(
+    Path(id): Path<i32>,
+    State(state): State<Arc<AppState>>,
+) -> crate::error::Result<()> {
+    sqlx::query!("DELETE FROM devices WHERE id = $1", id)
+        .execute(&state.db_pool)
+        .await?;
+    Ok(())
+}
+
+async fn get_locations(
+    State(state): State<Arc<AppState>>,
+) -> crate::error::Result<Json<Vec<String>>> {
+    let locs = sqlx::query!("SELECT DISTINCT location FROM devices")
+        .map(|r| r.location)
+        .fetch_all(&state.db_pool)
+        .await?;
+    Ok(Json(locs))
+}
+
+#[derive(Deserialize, Debug)]
+struct MachineTags {
+    machine_id: i32,
+    location: String,
+}
+
+#[derive(Deserialize, Debug)]
+struct Submission {
+    timestamp: DateTime<Utc>,
+    used_power: f64,
+}
+
+// TODO: Make API better
+async fn submit_data(
+    State(state): State<Arc<AppState>>,
+    Json(submission): Json<Submission>,
+) -> crate::error::Result<()> {
+    let authtoken = "".to_owned();
+    let machine_info = sqlx::query_as!(
+        MachineTags,
+        "SELECT id as machine_id, location FROM devices WHERE authtoken = $1",
+        authtoken
+    )
+    .fetch_one(&state.db_pool)
+    .await?;
+
+    let pud = PowerUsageData {
+        time: submission.timestamp,
+        used_power: submission.used_power,
+        location: machine_info.location,
+        machine_id: machine_info.machine_id,
+    };
+
+    state
+        .influxdb_client
+        .query(
+            vec![pud]
+                .into_iter()
+                .map(|e| e.into_query(&state.config.influxdb_query))
+                .collect::<Vec<_>>(),
+        )
+        .await?;
+
+    Ok(())
 }
